fix answer alignment in exercise replace

--- a/src/editor/plugins/core/edumed/replace/replace.less
+++ b/src/editor/plugins/core/edumed/replace/replace.less
@@ -6,7 +6,8 @@
 
     .tip {
         position: absolute;
-        top: -12px;
+        top: -8px;
+        left: 0;
         font-size: 9px;
         line-height: 12px;
         color: lighten(@red, 10%);
